--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.9",
+    "@types/jest": "^30.0.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "karma": "~6.3.16",
