Update FTP Deploy Action version in workflow

--- a/.github/workflows/deployToPlesk.yml
+++ b/.github/workflows/deployToPlesk.yml
@@ -26,15 +26,15 @@ jobs:
         # veya: ng build --configuration production
 
       - name: Deploy to Plesk via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          port: ${{ secrets.FTP_PORT }} # genelde 21 (FTP) veya 22 (SFTP) – SFTP için ayrı action kullanmalısın
+          port: ${{ secrets.FTP_PORT }}
           protocol: ftp
           local-dir: dist/saiderdemozturk-portfolio/
-          server-dir: /httpdocs/   # Plesk’te sitenin kök dizini (gerekirse değiştir)
+          server-dir: /httpdocs/
           exclude: |
             **/.git*
             **/.github*
